--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,13 @@
 {
     "cSpell.words": [
+        "analysed",
         "Balsamiq",
         "Behance",
         "Chinweze",
         "Cinemagic",
         "empathise",
         "frugalityfirst",
+        "wireframe",
         "wireframes",
         "Wireframing"
     ]
