--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,10 +3,13 @@
         "analysed",
         "Balsamiq",
         "Behance",
+        "blockless",
         "Chinweze",
         "Cinemagic",
         "empathise",
         "frugalityfirst",
+        "Kodchasan",
+        "unspaced",
         "wireframe",
         "wireframes",
         "Wireframing"
