Update settings.json file

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "blockless",
         "Chinweze",
         "Cinemagic",
+        "dribbble",
         "empathise",
         "frugalityfirst",
         "Kodchasan",
