--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "dribbble",
         "empathise",
         "frugalityfirst",
+        "Jotform",
         "Kodchasan",
         "unspaced",
         "wireframe",
