--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "blockless",
         "Chinweze",
         "Cinemagic",
+        "CYSY",
         "dribbble",
         "empathise",
         "frugalityfirst",
