--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,7 @@
         "unspaced",
         "wireframe",
         "wireframes",
-        "Wireframing"
+        "Wireframing",
+        "xmark"
     ]
 }
